--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jini</groupId>
+			<artifactId>tools</artifactId>
+			<version>2.1</version>
+<!--			<scope>system</scope>-->
+<!--			<systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>-->
+		</dependency>
 	</dependencies>
 
 	<build>
