--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.sourceforge.cobertura</groupId>
+			<artifactId>cobertura</artifactId>
+			<version>2.1.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun</groupId>
+					<artifactId>tools</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
@@ -75,13 +87,6 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jini</groupId>
-			<artifactId>tools</artifactId>
-			<version>2.1</version>
-<!--			<scope>system</scope>-->
-<!--			<systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>-->
 		</dependency>
 	</dependencies>
 
